--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Saroj Adhikari",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "express": "^4.18.2"
   },
   "devDependencies": {
